--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "express-ws-boiler",
+  "name": "room-tone-client",
   "version": "1.0.0",
-  "description": "An easy to use express and ws boiler plate",
+  "description": "client for room-tone",
   "main": "index.js",
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
   },
   "keywords": [],
-  "author": {
-    "email": "me@unsmart.co",
-    "name": "Garret Harp"
-  },
-  "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
@@ -20,13 +15,5 @@
     "express": "^4.17.1",
     "socket.io": "^3.1.2",
     "ws": "^7.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/itsUnsmart/express-ws-boiler.git"
-  },
-  "bugs": {
-    "url": "https://github.com/itsUnsmart/express-ws-boiler/issues"
-  },
-  "homepage": "https://github.com/itsUnsmart/express-ws-boiler"
+  }
 }
