--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.2",
-    "ws": "^7.3.0"
+    "socket.io": "^3.1.2"
   }
 }
